# kirill

./: README.md  pyproject.toml
src/coursework/: __init__.py  app.py
src/coursework/models/: chain.py  solution.py  task.py
src/coursework/templates/: generator.html  single_task.html  single_task_solution.html  solution_page.html  task.html
src/coursework/utils/: generator.py  solver.py
